@@ -1,5 +1,6 @@
 CHANGES IN VERSION 2.1.9
 ------------------------
+ o throw stop msg when gene can not be mapped by DAVID <2015-03-12, Thu>
  o add return NULL when DAVID fail (no enrichment found or wrong ID type) <2015-03-11, Wed>
  
 CHANGES IN VERSION 2.1.8
